--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -75,7 +75,7 @@ am__base_list = \
   sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
 am__installdirs = "$(DESTDIR)$(tcllibdir)" "$(DESTDIR)$(bindir)" \
 	"$(DESTDIR)$(bindir)" "$(DESTDIR)$(xinitrcdir)" \
-	"$(DESTDIR)$(tcllibdir)"
+	"$(DESTDIR)$(man1dir)" "$(DESTDIR)$(tcllibdir)"
 LTLIBRARIES = $(tcllib_LTLIBRARIES)
 libwacomxi_la_LIBADD =
 am_libwacomxi_la_OBJECTS = wacomxi.lo
@@ -99,6 +99,9 @@ LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	$(LDFLAGS) -o $@
 SOURCES = $(libwacomxi_la_SOURCES)
 DIST_SOURCES = $(libwacomxi_la_SOURCES)
+man1dir = $(mandir)/man1
+NROFF = nroff
+MANS = $(man1_MANS)
 HEADERS = $(tcllib_HEADERS)
 ETAGS = etags
 CTAGS = ctags
@@ -128,6 +131,7 @@ CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLLTOOL = @DLLTOOL@
 DSYMUTIL = @DSYMUTIL@
 DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
@@ -152,6 +156,7 @@ LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
@@ -164,9 +169,12 @@ PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
+PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -179,6 +187,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
 am__include = @am__include@
@@ -211,7 +220,6 @@ libdir = @libdir@
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
-lt_ECHO = @lt_ECHO@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
@@ -234,7 +242,7 @@ dist_bin_SCRIPTS = wacomcpl-exec
 bin_SCRIPTS = wacomcpl
 xinitrcdir = $(sysconfdir)/X11/xinit/xinitrc.d
 dist_xinitrc_SCRIPTS = wacomcpl.sh
-EXTRA_DIST = GPL wacomcpl.in
+EXTRA_DIST = GPL wacomcpl.in wacomcpl.man
 CLEANFILES = wacomcpl
 
 # Source dependencies
@@ -244,6 +252,7 @@ SUBSTS = \
          -e 's|__bindir__|$(bindir)|g' \
          -e 's|__libdir__|$(libdir)|g'
 
+man1_MANS = wacomcpl.man
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -473,6 +482,40 @@ clean-libtool:
 
 distclean-libtool:
 	-rm -f libtool config.lt
+install-man1: $(man1_MANS)
+	@$(NORMAL_INSTALL)
+	test -z "$(man1dir)" || $(MKDIR_P) "$(DESTDIR)$(man1dir)"
+	@list='$(man1_MANS)'; test -n "$(man1dir)" || exit 0; \
+	{ for i in $$list; do echo "$$i"; done; \
+	} | while read p; do \
+	  if test -f $$p; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; echo "$$p"; \
+	done | \
+	sed -e 'n;s,.*/,,;p;h;s,.*\.,,;s,^[^1][0-9a-z]*$$,1,;x' \
+	      -e 's,\.[0-9a-z]*$$,,;$(transform);G;s,\n,.,' | \
+	sed 'N;N;s,\n, ,g' | { \
+	list=; while read file base inst; do \
+	  if test "$$base" = "$$inst"; then list="$$list $$file"; else \
+	    echo " $(INSTALL_DATA) '$$file' '$(DESTDIR)$(man1dir)/$$inst'"; \
+	    $(INSTALL_DATA) "$$file" "$(DESTDIR)$(man1dir)/$$inst" || exit $$?; \
+	  fi; \
+	done; \
+	for i in $$list; do echo "$$i"; done | $(am__base_list) | \
+	while read files; do \
+	  test -z "$$files" || { \
+	    echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(man1dir)'"; \
+	    $(INSTALL_DATA) $$files "$(DESTDIR)$(man1dir)" || exit $$?; }; \
+	done; }
+
+uninstall-man1:
+	@$(NORMAL_UNINSTALL)
+	@list='$(man1_MANS)'; test -n "$(man1dir)" || exit 0; \
+	files=`{ for i in $$list; do echo "$$i"; done; \
+	} | sed -e 's,.*/,,;h;s,.*\.,,;s,^[^1][0-9a-z]*$$,1,;x' \
+	      -e 's,\.[0-9a-z]*$$,,;$(transform);G;s,\n,.,'`; \
+	test -z "$$files" || { \
+	  echo " ( cd '$(DESTDIR)$(man1dir)' && rm -f" $$files ")"; \
+	  cd "$(DESTDIR)$(man1dir)" && rm -f $$files; }
 install-tcllibHEADERS: $(tcllib_HEADERS)
 	@$(NORMAL_INSTALL)
 	test -z "$(tcllibdir)" || $(MKDIR_P) "$(DESTDIR)$(tcllibdir)"
@@ -547,6 +590,19 @@ distclean-tags:
 	-rm -f TAGS ID GTAGS GRTAGS GSYMS GPATH tags
 
 distdir: $(DISTFILES)
+	@list='$(MANS)'; if test -n "$$list"; then \
+	  list=`for p in $$list; do \
+	    if test -f $$p; then d=; else d="$(srcdir)/"; fi; \
+	    if test -f "$$d$$p"; then echo "$$d$$p"; else :; fi; done`; \
+	  if test -n "$$list" && \
+	    grep 'ab help2man is required to generate this page' $$list >/dev/null; then \
+	    echo "error: found man pages containing the \`missing help2man' replacement text:" >&2; \
+	    grep -l 'ab help2man is required to generate this page' $$list | sed 's/^/         /' >&2; \
+	    echo "       to fix them, install help2man, remove and regenerate the man pages;" >&2; \
+	    echo "       typically \`make maintainer-clean' will remove them" >&2; \
+	    exit 1; \
+	  else :; fi; \
+	else :; fi
 	$(am__remove_distdir)
 	test -d "$(distdir)" || mkdir "$(distdir)"
 	@srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*]/\\\\&/g'`; \
@@ -695,9 +751,9 @@ distcleancheck: distclean
 	       exit 1; } >&2
 check-am: all-am
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(SCRIPTS) $(HEADERS) config.h
+all-am: Makefile $(LTLIBRARIES) $(SCRIPTS) $(MANS) $(HEADERS) config.h
 installdirs:
-	for dir in "$(DESTDIR)$(tcllibdir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(xinitrcdir)" "$(DESTDIR)$(tcllibdir)"; do \
+	for dir in "$(DESTDIR)$(tcllibdir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" "$(DESTDIR)$(xinitrcdir)" "$(DESTDIR)$(man1dir)" "$(DESTDIR)$(tcllibdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -750,8 +806,8 @@ info: info-am
 
 info-am:
 
-install-data-am: install-dist_xinitrcSCRIPTS install-tcllibHEADERS \
-	install-tcllibLTLIBRARIES
+install-data-am: install-dist_xinitrcSCRIPTS install-man \
+	install-tcllibHEADERS install-tcllibLTLIBRARIES
 
 install-dvi: install-dvi-am
 
@@ -767,7 +823,7 @@ install-info: install-info-am
 
 install-info-am:
 
-install-man:
+install-man: install-man1
 
 install-pdf: install-pdf-am
 
@@ -800,8 +856,10 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-binSCRIPTS uninstall-dist_binSCRIPTS \
-	uninstall-dist_xinitrcSCRIPTS uninstall-tcllibHEADERS \
-	uninstall-tcllibLTLIBRARIES
+	uninstall-dist_xinitrcSCRIPTS uninstall-man \
+	uninstall-tcllibHEADERS uninstall-tcllibLTLIBRARIES
+
+uninstall-man: uninstall-man1
 
 .MAKE: all install-am install-strip
 
@@ -816,15 +874,15 @@ uninstall-am: uninstall-binSCRIPTS uninstall-dist_binSCRIPTS \
 	install-dist_binSCRIPTS install-dist_xinitrcSCRIPTS \
 	install-dvi install-dvi-am install-exec install-exec-am \
 	install-html install-html-am install-info install-info-am \
-	install-man install-pdf install-pdf-am install-ps \
+	install-man install-man1 install-pdf install-pdf-am install-ps \
 	install-ps-am install-strip install-tcllibHEADERS \
 	install-tcllibLTLIBRARIES installcheck installcheck-am \
 	installdirs maintainer-clean maintainer-clean-generic \
 	mostlyclean mostlyclean-compile mostlyclean-generic \
 	mostlyclean-libtool pdf pdf-am ps ps-am tags uninstall \
 	uninstall-am uninstall-binSCRIPTS uninstall-dist_binSCRIPTS \
-	uninstall-dist_xinitrcSCRIPTS uninstall-tcllibHEADERS \
-	uninstall-tcllibLTLIBRARIES
+	uninstall-dist_xinitrcSCRIPTS uninstall-man uninstall-man1 \
+	uninstall-tcllibHEADERS uninstall-tcllibLTLIBRARIES
 
 
 wacomcpl: wacomcpl.in Makefile
